# wasi-repl

./: .gitignore  Cargo.toml  LICENSE.md  README.md
components/echo/: Cargo.toml
components/echo/src/: bindings.rs  lib.rs
components/echo/wit/: world.wit
components/fs-loader/src/: bindings.rs  lib.rs
components/fs-loader/wit/: world.wit
components/hello-world/: Cargo.toml
components/hello-world/src/: bindings.rs
components/ipfs-loader/src/: bindings.rs
components/ipfs-loader/wit/: world.wit
host/: Cargo.toml
host/src/: main.rs
modules/fs-loader/: Cargo.toml
modules/fs-loader/src/: bindings.rs
modules/fs-loader/wit/: world.wit
modules/ipfs-loader/: Cargo.toml
modules/ipfs-loader/src/: lib.rs
repl/: Cargo.toml
repl/src/: main.rs
