[package]
name = "ipfs-repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
rustyline = "14.0.0"
wasi-common = "19.0.1"
wasmtime = {version = "19.0.1", features = ["component-model"] }
wasmtime-wasi = "19.0.1"
